resolved the dark mode issue with increasing opacity for copyright logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body::before {
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            opacity: 0.1;
+            opacity: 0.5;
             z-index: -1;
             pointer-events: none;
         }
@@ -926,8 +926,8 @@ position: relative;
 }
 
 body {
-    /* background-color: var(--bg-primary); */
-    /* color: var(--text-primary); */
+    background-color: var(--bg-primary);
+    color: var(--text-primary);
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
